# licensor

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: license.yml  python.yml
src/licensor/: metadata.py
test/: test_true.py
