# --------------------------------------------------------------------------------------------------
# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Jayesh Badwaik <j.badwaik@fz-juelich.de>
# --------------------------------------------------------------------------------------------------

[project]
name = "licensor"
dynamic = ["version"]
description = 'A helper script for the licensor project'
readme = "readme.md"
license = "Apache-2.0"
authors = [
{ name = "Jayesh Badwaik", email = "j.badwaik@fz-juelich.de" },
]
dependencies = [
  "semver"
]

[project.urls]
Documentation = "ambhora.github.io/licensor"
Issues = "https://github.com/ambhora/licensor/issues"
Source = "https://github.com/ambhora/licensor"

[project.scripts]
licensor = "licensor.cli:main"

# --------------------------------------------------------------------------------------------------
# Hatch configuration
# --------------------------------------------------------------------------------------------------
[tool.hatch.version]
path = "src/licensor/metadata.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/licensor"]

[tool.hatch.build.targets.wheel.shared-data]
"share"="share"

# --------------------------------------------------------------------------------------------------
# PyTest configuration
# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov --cov-report term-missing --cov-fail-under=98"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.types]
dependencies = [
  "types-PyYAML",
  "mypy"
]

[tool.hatch.envs.doc]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mike"
]

[tool.black]
line-length = 100
